# x55-ui

./: package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Fetcher.vue
